# dh-python

./: .gitlab-ci.yml  Makefile  README.rst  dh_pypy  dh_pypy.rst  dh_python2  dh_python2.rst  dh_python3  dh_python3.rst  pybuild  pybuild-autopkgtest  pybuild-autopkgtest.rst  pybuild.rst
autoscripts/: postinst-py3compile  postinst-pycompile  postinst-pypycompile  prerm-py3clean  prerm-pyclean  prerm-pypyclean
debian/: changelog  control  docs  install  links  manpages  rules
debian/source/: lintian-overrides
debian/tests/: control  nosetests  pybuild  pybuild-autopkgtest
dh/: pybuild.pm
dhpython/: debhelper.py  depends.py  exceptions.py  fs.py  markers.py  option.py  pydist.py  tools.py  version.py
pydist/: Makefile  README.PyDist  cpython2_fallback  cpython3_fallback  generate_fallback_list.py  pypy_fallback
tests/: Makefile  common.mk  common.py  test-package-show-info  test_debhelper.py  test_depends.py  test_fs.py
tests/t301/: setup.py
tests/t304/: Makefile
tests/t304/debian/: control  overrides.install  rules
tests/t305/: Makefile
tests/t305/debian/: rules
tests/ta01/: Makefile
tests/ta02/: setup.cfg
tests/tpb01/: Makefile  setup.cfg
tests/tpb02/: Makefile  pyproject.toml
tests/tpb03/: Makefile
tests/tpb04/: Makefile  setup.py  tox.ini
tests/tpb05/: Makefile  pyproject.toml
tests/tpb05/debian/: control  rules
tests/tpb06/: Makefile  setup.cfg
tests/tpb07/: Makefile
tests/tpb07/bar/: pyproject.toml  setup.cfg
tests/tpb07/bar/bar/: __init__.py  testy_bar.py
tests/tpb08/: Makefile
tests/tpb09/: Makefile
(+24 files in other folders)
