[metadata]
name = bar
version = 0.1
description = My package description
long_description = My long description
license = Expat

[options]
zip_safe = False
packages = find:
install_requires =
    cachy
    importlib-metadata; python_version<'3.5'

[options.entry_points]
console_scripts =
    bar = bar:main
